Refactored entity linking and finished the tabular data import module

--- a/example/biodiv-graph/importJobs/bise.properties
+++ b/example/biodiv-graph/importJobs/bise.properties
@@ -1,12 +1,15 @@
 fileLocation : /home/leguilln/workspace/biodiv-kg-builder/example/biodiv-graph/tables/1.prior_interactions.csv
-tripleSubject :
+csvFormat : triple
+subject :
    columnName : consumer_gbif_key
-   dataType : taxonId
-   prefix : "GBIF:"
-triplePredicate :
+   transform :
+      - prefix : "GBIF:"
+   mapping : taxonId
+predicate :
    columnName : interaction_type
-   dataType : interaction
-tripleObject :
+   mapping : "/home/leguilln/workspace/biodiv-kg-builder/example/biodiv-graph/tables/interactions_mapping.yml"
+object :
    columnName : resource_gbif_key
-   dataType : taxonId
-   prefix : "GBIF:"
+   transform :
+      - prefix : "GBIF:"
+   mapping : taxonId
