Renamed project BiodivGraph+ refactoring
Added some unit tests

--- a/example/biodiv-graph/importJobs/bise.properties
+++ b/example/biodiv-graph/importJobs/bise.properties
@@ -1,15 +1,15 @@
-fileLocation : /home/leguilln/workspace/biodiv-kg-builder/example/biodiv-graph/tables/1.prior_interactions.csv
+fileLocation : /usr/local/airflow/dags/example/biodiv-graph/tables/1.prior_interactions.csv
 csvFormat : triple
 subject :
    columnName : consumer_gbif_key
    transform :
       - prefix : "GBIF:"
-   mapping : taxonId
+   mapping : taxId
 predicate :
    columnName : interaction_type
-   mapping : "/home/leguilln/workspace/biodiv-kg-builder/example/biodiv-graph/tables/interactions_mapping.yml"
+   mapping : "/usr/local/airflow/dags/example/biodiv-graph/tables/interactions_mapping.yml"
 object :
    columnName : resource_gbif_key
    transform :
       - prefix : "GBIF:"
-   mapping : taxonId
+   mapping : taxId
