Added support of references in the data model

--- a/dags_test_data/sources/test_csv/config/tab.properties
+++ b/dags_test_data/sources/test_csv/config/tab.properties
@@ -1,6 +1,6 @@
 # Data
 
-data_file : data/KB_v2_sample.csv
+data_file : data/1.interactions_list_sample.csv
 data_extension : ".csv"
 delimiter : ","
 
@@ -25,5 +25,6 @@ triplifier_conf :
   subject_column_name : consumer
   predicate_column_name : type
   object_column_name : resource
+  references_column_name : reference
   interaction_mapping_file : mappings/inter-to-uri.yml
   ontological_mapping_file : mappings/inter-to-onto.yml
