--- a/dags_test_data/sources/test_globi/config/job.conf
+++ b/dags_test_data/sources/test_globi/config/job.conf
@@ -1,4 +1,4 @@
-internal_id : test_globi
+internal_id : globalbioticinteractions.org
 properties : globi.properties
 process : CSV2RDF
 num_processes : 3
