Added support of scientific name and taxon rank in the data model

--- a/dags_test_data/sources/test_csv/config/tab.properties
+++ b/dags_test_data/sources/test_csv/config/tab.properties
@@ -26,5 +26,9 @@ triplifier_conf :
   predicate_column_name : type
   object_column_name : resource
   references_column_name : reference
+  subject_name_column_name : consumer_name
+  subject_rank_column_name : consumer_rank
+  object_name_column_name : resource_name
+  object_rank_column_name : resource_rank  
   interaction_mapping_file : mappings/inter-to-uri.yml
   ontological_mapping_file : mappings/inter-to-onto.yml
