New architecture based on distinction between extractors, transformers and loaders components
Implemented file extractor

--- a/dags_test_data/sources/test_csv/config/tab.properties
+++ b/dags_test_data/sources/test_csv/config/tab.properties
@@ -9,26 +9,28 @@ delimiter : ","
 taxonomic_mapper_conf :
    columns :
      -
-        column_name : consumer
-        column_type : id
+        id_column : consumer
+        name_column : consumer_name
+        uri_column : consumer_uri
         source_taxonomy : GBIF
         target_taxonomy : GBIF
      -
-        column_name : resource
-        column_type : id
+        id_column : resource
+        name_column : resource_name
+        uri_column : resource_uri
         source_taxonomy : GBIF
         target_taxonomy : GBIF
 
 # Triplifier configuration
 
 triplifier_conf :
-  subject_column_name : consumer
+  subject_column_name : consumer_uri
   predicate_column_name : type
-  object_column_name : resource
+  object_column_name : resource_uri
   references_column_name : reference
   subject_name_column_name : consumer_name
   subject_rank_column_name : consumer_rank
   object_name_column_name : resource_name
-  object_rank_column_name : resource_rank  
+  object_rank_column_name : resource_rank
   interaction_mapping_file : mappings/inter-to-uri.yml
   ontological_mapping_file : mappings/inter-to-onto.yml
