--- a/dags_test_data/scheduler-config.yml
+++ b/dags_test_data/scheduler-config.yml
@@ -1,5 +1,6 @@
 properties : biodivgraph.properties
 sources : sources
+loader: loader-config.yml
 #integrationJobs : services
 #publishingJob : neo4j-store-config.yml
 #dumpDirectory : dumps
