--- a/dags_test_data/sources/test_csv/config/config.yml
+++ b/dags_test_data/sources/test_csv/config/config.yml
@@ -6,13 +6,9 @@ properties : tab.properties
 file_location : "file:///usr/local/airflow/dags/dags_test_data/sources/test_csv/data/1.interactions_list_sample.csv"
 data_format : "csv"
 
-
-# process : CSV2RDF
-
 num_processes : 3
 source_root_dir : "/home/leguilln/workspace/BiodivGraph/dags_test_data/sources/test_csv"
 
-# dataSource : Tabular
-# service : TabData2RDF
-# deleteTempFiles : False
 scheduleInterval : "@once"
+
+graph_uri : https://leca.osug.fr/biodivgraph/test_csv_data
