--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,11 @@ pandas==0.25.3
 pytest==3.10.1
 rdflib==4.2.2
 SPARQLWrapper==1.8.5
-docker_py==1.10.6
+docker
 python_magic==0.4.18
 pynomer==0.1.1
 PyYAML==5.3.1
 requests-file==1.5.1
 pyunpack==0.2.1
 patool==1.12
+filesplit==2.0.0
