Mapping of non taxonomic resources

--- a/pipe-config/sources/test_csv/config/tab.properties
+++ b/pipe-config/sources/test_csv/config/tab.properties
@@ -21,11 +21,23 @@ taxonomic_mapper_conf :
         source_taxonomy : GBIF
         target_taxonomy : NCBI
 
+entity_mapper_conf :
+   columns :
+     -
+        column_name : resource_name
+        uri_column : resource_uri
+        mapping_file : mappings/resources-mapping.yml
+     -
+        column_name : type
+        uri_column : type_uri
+        mapping_file : mappings/interactions-mapping.yml
+
+
 # Triplifier configuration
 
 triplifier_conf :
   subject_column_name : consumer_uri
-  predicate_column_name : type
+  predicate_column_name : type_uri
   object_column_name : resource_uri
   references_column_name : reference
   subject_name_column_name : consumer_name
