--- a/docker-compose-LocalExecutor.yml
+++ b/docker-compose-LocalExecutor.yml
@@ -74,13 +74,15 @@ services:
 
     nomer:
         build:
-          context: https://github.com/nleguillarme/nleguillarme/pynomer.git
+          context: ${HOME}/workspace/pynomer
+          #context: https://github.com/nleguillarme/pynomer.git
           dockerfile: Dockerfile.server
         image: pynomer-server
+        user: "${USER_ID}:${GROUP_ID}"
         ports:
             - "9090:9090"
         volumes:
-            - ~/.biodivgraph/nomer:/nomer
+            - ${NOMER_DIR}:/.nomer
 
     postgres:
         image: postgres:9.6
@@ -112,7 +114,7 @@ services:
             - AIRFLOW__WEBSERVER__DAG_DEFAULT_VIEW=graph
             - AIRFLOW__WEBSERVER__AUTHENTICATE=False
             - CONFIG_DIR=${CONFIG_DIR}
-            - USER_UID=1001
+            - USER_UID=${USER_ID}
             #- AIRFLOW__CORE__FERNET_KEY=${FERNET_KEY}"
         volumes:
             - ${CONFIG_DIR}:${CONFIG_DIR}
@@ -120,7 +122,6 @@ services:
             - ${HOME}/.biodivgraph/logs:/opt/airflow/logs
             - /var/run/docker.sock:/var/run/docker.sock
             - /usr/bin/docker:/usr/bin/docker
-            # - ~/.biodivgraph/nomer:/opt/airflow/nomer
             # Uncomment to include custom plugins
             # - ./plugins:/usr/local/airflow/plugins
         ports:
