--- a/pipe-config/sources/test_csv/config/config.yml
+++ b/pipe-config/sources/test_csv/config/config.yml
@@ -2,12 +2,12 @@ internal_id : test.csv
 properties : tab.properties
 
 # Dataset location : one of (file_location, http_endpoint, sparql_endpoint)
-#file_location : "file://$CONFIG_DIR/sources/test_csv/data/1.interactions_list_sample.csv"
+file_location : "file://$CONFIG_DIR/sources/test_csv/data/1.interactions_list_sample.csv"
 
-file_location : "file://$CONFIG_DIR/sources/test_csv/data/KB_v2.xls"
+#file_location : "file://$CONFIG_DIR/sources/test_csv/data/KB_v2.xls"
 data_format : "csv"
 
-num_processes : 8
+num_processes : 3
 source_root_dir : "$CONFIG_DIR/sources/test_csv"
 
 scheduleInterval : "@once"
