Add ontology mapping using Owlready2

--- a/pipe-config/sources/hedde_interactions/config/tab.properties
+++ b/pipe-config/sources/hedde_interactions/config/tab.properties
@@ -24,19 +24,20 @@ taxonomic_mapper_conf :
         full_lineage : False
 
 entity_mapper_conf :
+   ontology_file : mappings/stwo.owl
    columns :
      -
         column_name : resource_name
         uri_column : resource_uri
-        mapping_file : mappings/resources-mapping.yml
+#        mapping_file : mappings/resources-mapping.yml
      -
         column_name : type
         uri_column : type_uri
-        mapping_file : mappings/interactions-mapping.yml
+#        mapping_file : mappings/interactions-mapping.yml
      -
         column_name : consumer_name
         uri_column : consumer_uri
-        mapping_file : mappings/resources-mapping.yml
+#        mapping_file : mappings/resources-mapping.yml
 
 
 # Triplifier configuration
