Add converter factory to turn datasets into data frames
Rewrite taxonomic mapper using a validate and map scheme

--- a/docker-compose-LocalExecutor.yml
+++ b/docker-compose-LocalExecutor.yml
@@ -117,6 +117,7 @@ services:
             - CONFIG_DIR=${CONFIG_DIR}
             - USER_UID=${USER_ID}
             - NOMER_DIR=${NOMER_DIR}
+            - BDG_MODE=${BDG_MODE}
             #- AIRFLOW__CORE__FERNET_KEY=${FERNET_KEY}"
         volumes:
             - ${CONFIG_DIR}:${CONFIG_DIR}
