--- a/pipe-config/sources/test_csv/config/config.yml
+++ b/pipe-config/sources/test_csv/config/config.yml
@@ -5,7 +5,9 @@ properties : tab.properties
 file_location : "file://$CONFIG_DIR/sources/test_csv/data/1.interactions_list_sample.csv"
 
 #file_location : "file://$CONFIG_DIR/sources/test_csv/data/KB_v2.xls"
-data_format : "csv"
+
+standard_format : "csv"
+delimiter : ","
 
 num_processes : 3
 source_root_dir : "$CONFIG_DIR/sources/test_csv"
